k8s/nird/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: elixir-uit-ns11105k
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
