k8s/nird/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: elixir-uit-ns11105k
  annotations:
    appstore.uninett.no/contact_email: joshua.baskaran@uit.no
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - auth.elixir-uit.sigma2.no
      secretName: auth-tls
  rules:
    - host: auth.elixir-uit.sigma2.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
