k8s/nird/keycloak/egress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-keycloak-egress
  namespace: elixir-uit-ns11105k
spec:
  podSelector:
    matchLabels:
      app: keycloak
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
    - to: [ ]  # Allow DNS lookups
      ports:
        - protocol: UDP
          port: 53
